--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO:
   ☐ Configuration interface.
-  ☐ Multicast (or broadcast).
-  ☐ IPv6.
+  ☐ Multicast (or broadcast). @started(19-02-06 00:34)
+  ☐ IPv6. @started
   ☐ Add Wifi based location (On boot, or on configuration).
 
   UKHASnet:
